_Source/force-app/main/default/objects/BI_Tracked_Policy__c/BI_Tracked_Policy__c.object-meta.xml
<CustomObject>
    <label>Tracked Policy</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Tracked Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>