_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The OA that the policy change pertains to</inlineHelpText>
    <label>Airline</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Custom Accounts of type Airline can be selected</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Custom Account</value>
        </filterItems>
        <filterItems>
            <field>Account.BI_Account_Type__c</field>
            <operation>equals</operation>
            <value>Airline</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>BI_Policy_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>