_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Announcement_Date__c</fullName>
    <inlineHelpText>The approximate date that the airline made the policy announcement</inlineHelpText>
    <label>Announcement Date</label>
    <type>Date</type>
</CustomField>