_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Category__c</fullName>
    <inlineHelpText>The overarching category the policy tracking record falls into</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Products</fullName>
            </value>
            <value>
                <fullName>B2C Products</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Reservations / Ticketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>