_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Comments__c</fullName>
    <inlineHelpText>Any additional important info you want to keep track of</inlineHelpText>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>