_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_OA_Policy_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_OA_Policy_Effective_Start_Date__c</fullName>
    <label>OA Policy Effective Start Date</label>
    <type>Date</type>
</CustomField>