_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_OA_Policy_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>BI_OA_Policy_Synopsis__c</fullName>
    <inlineHelpText>A concise summary that includes what policy was introduced/changed/cancelled, and any known reasons why the policy was introduced (ex. new, changed or enhancement policy, competitive re-action, response to regulation etc.)</inlineHelpText>
    <label>OA Policy Synopsis</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>