_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Original_Policy_Tracked__c.field-meta.xml
<CustomField>
    <fullName>BI_Original_Policy_Tracked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When a policy is recorded, and subsequently modified by either UA or OA, you can create a new record with the updated information and use this field to associate your newly captured policy change to its predecessor</inlineHelpText>
    <label>Original Policy Tracked</label>
    <referenceTo>BI_Tracked_Policy__c</referenceTo>
    <relationshipName>BI_Parent_Policy_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>