_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Sub_Category__c</fullName>
    <inlineHelpText>The sub-category the policy tracking record falls into</inlineHelpText>
    <label>Sub-Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Chargebacks</fullName>
            </value>
            <value>
                <fullName>Debit Memos</fullName>
            </value>
            <value>
                <fullName>Fare Rules</fullName>
            </value>
            <value>
                <fullName>Ticket Validity</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Agency policy (MCO, no-show, etc.)</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Promotions / Offers</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Ancillary - Airport</fullName>
            </value>
            <value>
                <fullName>Ancillary - Onboard (non-seats)</fullName>
            </value>
            <value>
                <fullName>Ancillary - Onboard (seats)</fullName>
            </value>
            <value>
                <fullName>Ancillary - Travel Services (ex. car/hotel etc.)</fullName>
            </value>
            <value>
                <fullName>Product Exceptions - Pre-Paid</fullName>
            </value>
            <value>
                <fullName>Product Exceptions - Points-Based</fullName>
            </value>
            <value>
                <fullName>Product Exceptions - Corporate</fullName>
            </value>
            <value>
                <fullName>Self-Serve Tools</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Preferred / Priority</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>