_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_UA_Customer_Comparison_Assessment__c.field-meta.xml
<CustomField>
    <fullName>BI_UA_Customer_Comparison_Assessment__c</fullName>
    <inlineHelpText>From a customer&apos;s perspective, how does United&apos;s policy compare to the OA policy</inlineHelpText>
    <label>UA Customer Comparison Assessment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-2: far inferior</fullName>
            </value>
            <value>
                <fullName>-1: slightly inferior</fullName>
            </value>
            <value>
                <fullName>0: similar / same</fullName>
            </value>
            <value>
                <fullName>1: slightly superior</fullName>
            </value>
            <value>
                <fullName>2: far superior </fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>