_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_UA_Policy_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_UA_Policy_Effective_End_Date__c</fullName>
    <label>UA Policy Effective End Date</label>
    <type>Date</type>
</CustomField>