_Source/force-app/main/default/objects/BI_Tracked_Policy__c/fields/BI_UA_Policy_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>BI_UA_Policy_Synopsis__c</fullName>
    <label>UA Policy Synopsis</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>