_Source/force-app/main/default/objects/BI_Tracked_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BI_Category__c</columns>
    <columns>BI_Sub_Category__c</columns>
    <columns>BI_OA_Policy_Synopsis__c</columns>
    <columns>BI_UA_Policy_Synopsis__c</columns>
    <columns>BI_UA_Customer_Comparison_Assessment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>